--- a/package.json
+++ b/package.json
@@ -55,8 +55,8 @@
     "pdfjs-dist": "^5.4.296",
     "pg": "^8.16.3",
     "prisma": "^6.15.0",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "redis": "^5.8.2",
     "sharp": "^0.34.4",
     "sodium-native": "^5.0.8",
@@ -72,8 +72,8 @@
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "@types/sharp": "^0.31.1",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
